# SourceStats

./: .gitignore  .gitmodules  Cargo.toml
capnp/: protocol.capnp
docs/developer_docs/: book.toml
docs/developer_docs/src/: SUMMARY.md
docs/developer_docs/src/getting_started/: README.md  web_app.md
sourcestats_daemon/: Cargo.toml  build.rs
sourcestats_daemon/src/: db_worker_pool.rs  event_listener.rs  event_stream.rs  main.rs  packet.rs
sourcestats_database/: .env.default  Cargo.toml  diesel.toml
sourcestats_database/migrations/2019-01-24-175548_create_accounts/: up.sql
sourcestats_database/migrations/2019-01-24-175721_create_servers/: up.sql
sourcestats_database/migrations/2019-01-24-184256_create_players/: up.sql
sourcestats_database/migrations/2019-01-24-184300_create_kills_hypertable/: down.sql  up.sql
sourcestats_database/migrations/2019-01-24-212527_add_encryption_keys/: down.sql  up.sql
sourcestats_database/migrations/2019-01-25-181905_index_players_by_steam_id/: down.sql  up.sql
sourcestats_database/migrations/2019-01-25-210107_index_server_keys_by_server/: down.sql  up.sql
sourcestats_database/migrations/2019-01-26-180925_create_rank_history_table/: down.sql  up.sql
sourcestats_database/src/: lib.rs  pool.rs  schema.rs
sourcestats_database/src/models/: kills.rs  mod.rs  player.rs  server.rs
sourcestats_extension/: CMakeLists.rust.txt  CMakeLists.txt  Cargo.toml
sourcestats_extension/cpp/: Extension.cpp  Extension.hpp
sourcestats_extension/cpp/include/: smsdk_config.h
sourcestats_extension/src/: lib.rs
sourcestats_protocol/: Cargo.toml
sourcestats_protocol/src/: lib.rs  message.rs  player_update.rs
sourcestats_web/: Cargo.toml
sourcestats_web/src/: main.rs
sourcestats_web/src/ui/: mod.rs
src/: main.rs
templates/: base_header.tera  index.tera  main.tera
