[package]
name = "sourcestats_daemon"
version = "0.1.0"
authors = ["Dreae <dreae@dreae.onl>"]
edition = "2018"
build = "build.rs"

[dependencies]
capnp = "0.9.4"
ring = "0.14.2"
mio = "0.6.16"
failure = "0.1.5"
failure_derive = "0.1.5"
log = "0.4.6"
env_logger = "0.6.0"
slab = "0.4.2"
bytes = "0.4.11"
byteorder = "1.3.1"
crossbeam-channel = "0.3.6"

[build-dependencies]
capnpc = "0.9.3"