[package]
name = "sourcestats_daemon"
version = "0.1.0"
authors = ["Dreae <dreae@dreae.onl>"]
edition = "2018"

[dependencies]
mio = "0.6.16"
failure = "0.1.5"
failure_derive = "0.1.5"
log = "0.4.6"
env_logger = "0.6.0"
slab = "0.4.2"
bytes = "0.4.11"
byteorder = "1.3.1"
num_cpus = "1.9.0"
rayon = "1.0.3"
dotenv = "0.13.0"
chrono = "0.4.6"

sourcestats_protocol = { path = "../sourcestats_protocol" }
sourcestats_database = { path = "../sourcestats_database" }

[profile.release]
lto = "fat"
codegen-units = 1